--- a/mox/build.gradle
+++ b/mox/build.gradle
@@ -42,4 +42,6 @@ dependencies {
 
     implementation 'com.alibaba:fastjson:1.2.61'
     implementation 'androidx.core:core-ktx:1.0.2'
+
+    implementation project(":JsonVision")
 }
