--- a/manhole-plugin/build.gradle
+++ b/manhole-plugin/build.gradle
@@ -1,4 +1,7 @@
 apply plugin: 'groovy'
+apply plugin: 'com.github.dcendents.android-maven' //发布到JitPack
+
+group='com.github.freesith'
 
 repositories {
     maven { url "https://maven.aliyun.com/repository/google"}
