--- a/app_moxy/build.gradle
+++ b/app_moxy/build.gradle
@@ -1,7 +1,9 @@
+import com.freesith.manhole.plugin.ManholePlugin
+
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
-apply plugin: MockOkHttpPlugin
+apply plugin: ManholePlugin
 
 
 android {
@@ -39,4 +41,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
 
     implementation 'com.squareup.okhttp3:okhttp:3.11.0'
+
+    implementation project(":manhole")
 }
