--- a/app_moxy/build.gradle
+++ b/app_moxy/build.gradle
@@ -42,5 +42,5 @@ dependencies {
 
     implementation 'com.squareup.okhttp3:okhttp:3.11.0'
 
-    implementation project(":manhole")
+//    implementation project(":manhole")
 }
