--- a/app_moxy/build.gradle
+++ b/app_moxy/build.gradle
@@ -41,5 +41,5 @@ dependencies {
 
     implementation 'com.squareup.okhttp3:okhttp:3.11.0'
 
-//    implementation project(":manhole")
+    implementation project(":manhole")
 }
