--- a/app_moxy/build.gradle
+++ b/app_moxy/build.gradle
@@ -2,14 +2,14 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
-apply plugin: 'plugin.manhole-plugin'
+//apply plugin: 'plugin.manhole-plugin'
 
 
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
     defaultConfig {
-        applicationId "com.example.moxy"
+        applicationId "com.freesith.manhole"
         minSdkVersion 16
         targetSdkVersion 29
         versionCode 1
