--- a/app_moxy/build.gradle
+++ b/app_moxy/build.gradle
@@ -9,7 +9,7 @@ android {
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
     defaultConfig {
-        applicationId "com.freesith.manhole"
+        applicationId "com.freesith.manhole.demo"
         minSdkVersion 16
         targetSdkVersion 29
         versionCode 1
