--- a/app_moxy/build.gradle
+++ b/app_moxy/build.gradle
@@ -45,6 +45,6 @@ dependencies {
 
     implementation 'com.squareup.okhttp3:okhttp:3.11.0'
 
-    implementation project(":manhole")
+    compile project(":manhole")
     implementation project(":jsonview")
 }
