--- a/manhole/build.gradle
+++ b/manhole/build.gradle
@@ -41,5 +41,5 @@ dependencies {
     implementation 'com.alibaba:fastjson:1.2.61'
     implementation 'androidx.core:core-ktx:1.0.2'
 
-//    implementation project(":JsonVision")
+    implementation project(":jsonview")
 }
